# probs-ISWC2021-example

./: .buildinfo  .gitignore  CITATION.cff  README.md  aggregates.html  composition.html  data_model.html  datasources.html  dodo.py  equivalence.html  genindex.html  indices.html  intro.html  object_definitions.html  objects.inv  original_data_points.html  processing_pipeline.html  pyproject.toml  query_results.html  search.html  searchindex.js  system-object.html
.github/workflows/: build.yml
_sources/: aggregates.ipynb  composition.ipynb  composition.md  datasources.md  equivalence.ipynb  equivalence.md  indices.md  intro.md  object_definitions.ipynb  object_definitions.md  original_data_points.ipynb  original_data_points.md  processing_pipeline.md  query_results.ipynb  query_results.md
_static/: system-definitions.css
datasources/: data_links.txt
datasources/bgs/: aggregates.csv  load_data.rdfox  map.dlog
datasources/comtrade/: ct-2018-exports.csv  ct-2018-imports.csv  load_data.rdfox  map.dlog
datasources/object_mappings/: load_data.rdfox  map.dlog  (+1 more)
docs/: _config.yml  _config_extract_rdf.yml  _toc.yml  aggregates.md  composition.md  data_model.md  datasources.md  equivalence.md  example_data.py  indices.md  intro.md  object_definitions.md  original_data_points.md  processing_pipeline.md  query_results.md
raw_data/: PRD_2016_20200617_185122.csv  PRD_2017_20200617_185035.csv  PRODCOM2014DATA_extract.csv  PRODCOM2016DATA.csv  PRODCOM2017DATA.csv  PRODCOM2018DATA.csv  ct-2018-exports.csv  ct-2018-imports.csv
scripts/: conversion.py  preprocess.py
(+26 files in other folders)
